--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <li><b>Age:</b> 23</li>
             <li><b>Gender:</b> Male</li>
           </ul>
-          <button class="btn btn-theme-outline" style="transition:all.6s;"> <a href="assets/img/Resume.pdf" download style="text-decoration: none; color: rgb(0, 0, 0);">Download Resume</a> </button>
+          <button class="btn btn-theme-outline" style="transition:all.6s;"> <a href="assets/img/My CV.pdf" download style="text-decoration: none; color: rgb(0, 0, 0);">Download CV</a> </button>
         </div>
       </div>
     </div>
@@ -109,7 +109,7 @@
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">JavaScript</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 65%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">65%</div>
+                <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">65%</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
@@ -127,7 +127,7 @@
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">Phyton</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
               </div>
             </div>
           </div>
@@ -136,9 +136,9 @@
           <div class="px-lg-3">
             <h4 class="wow fadeInUp">Design Skills</h4>
             <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">UI / UX Design</span>
+              <span class="caption">Machine Learning</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 78%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">78%</div>
+                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">78%</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
@@ -151,6 +151,12 @@
               <span class="caption">Data Analysis</span>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" style="width: 79%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">79%</div>
+              </div>
+            </div>
+            <div class="progress-wrapper wow fadeInUp">
+              <span class="caption">UX/UI Design</span>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 55%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">90%</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
@@ -174,6 +180,14 @@
                 <h5>Bsc. Statistics</h5>
                 <small class="fg-theme">Kwame Nkrumah University of Science and Technology</small>
                 <p>Expected to complete in June 2022.  </p>
+              </div>
+            </li>
+            <li>
+              <div class="title">2022 - Current</div>
+              <div class="details">
+                <h5>Bsc. Statistics</h5>
+                <small class="fg-theme">AWS Machine Learnine Nano Degree (UDACITY)</small>
+                <p>Expected to complete in March 2023  </p>
               </div>
             </li>
             <li>
