--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
         </div>
         <div class="col-lg-6 offset-lg-1 wow fadeInRight">
           <h1 class="fw-light">David Nartey</h1>
-          <h5 class="fg-theme mb-3">Front-End Developer & UI/UX Designer</h5>
-          <p class="text-muted">An upcoming front-end developer, with intermediate experience in UX/UI designing and data analysis. </p>
+          <h5 class="fg-theme mb-3">AI/ML Developer(Data Scientist) / Front-End Developer</h5>
+          <p class="text-muted">An upcoming data scientist developer, with intermediate experience in front-end development and UX/UI design. </p>
           <ul class="theme-list">
             <li><b>From:</b> Greater Accra, GHANA</li>
             <li><b>Lives In:</b> Koforidua, GHANA</li>
@@ -107,6 +107,18 @@
           <div class="px-lg-3">
             <h4 class="wow fadeInUp">Coding skills</h4>
             <div class="progress-wrapper wow fadeInUp">
+             <div class="progress-wrapper wow fadeInUp">
+              <span class="caption">Phyton</span>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+              </div>
+            </div>
+            <div class="progress-wrapper wow fadeInUp">
+              <span class="caption">Machine Learning</span>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">78%</div>
+              </div>
+            </div>
               <span class="caption">JavaScript</span>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">65%</div>
@@ -119,15 +131,15 @@
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">HTML + CSS</span>
+              <span class="caption">Data Analysis</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">95%</div>
+                <div class="progress-bar" role="progressbar" style="width: 79%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">79%</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">Phyton</span>
+              <span class="caption">HTML + CSS</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+                <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">95%</div>
               </div>
             </div>
           </div>
@@ -136,21 +148,9 @@
           <div class="px-lg-3">
             <h4 class="wow fadeInUp">Design Skills</h4>
             <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">Machine Learning</span>
-              <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">78%</div>
-              </div>
-            </div>
-            <div class="progress-wrapper wow fadeInUp">
               <span class="caption">Web Design</span>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">70%</div>
-              </div>
-            </div>
-            <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">Data Analysis</span>
-              <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 79%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">79%</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
