--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="caption-header text-center wow zoomInDown">
       <h5 class="fw-normal">Welcome</h5>
       <h1 class="fw-light mb-7" >I'm <b class="fg-theme"> <span style="font-weight: bold;">David</span> </b> Nartey</h1>
-      <div class="badge">Front-End Developer</div>
+      <div class="badge">Data Analyst</div>
     </div> <!-- End Caption header -->
   </div>
   
@@ -89,7 +89,7 @@
         <div class="col-lg-6 offset-lg-1 wow fadeInRight">
           <h1 class="fw-light">David Nartey</h1>
           <h5 class="fg-theme mb-3">AI/ML Developer(Data Scientist) / Front-End Developer</h5>
-          <p class="text-muted">An upcoming data scientist developer, with intermediate experience in front-end development and UX/UI design. </p>
+          <p class="text-muted">An upcoming data scientist, with intermediate experience in front-end development and UX/UI design. </p>
           <ul class="theme-list">
             <li><b>From:</b> Greater Accra, GHANA</li>
             <li><b>Lives In:</b> Koforidua, GHANA</li>
@@ -185,7 +185,7 @@
             <li>
               <div class="title">2022 - Current</div>
               <div class="details">
-                <h5>Bsc. Statistics</h5>
+                <h5>Machine Learnine/ AI development</h5>
                 <small class="fg-theme">AWS Machine Learnine Nano Degree (UDACITY)</small>
                 <p>Expected to complete in March 2023  </p>
               </div>
